fatto header del sito

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
   
     <header>
+      <h1> Il mio Viaggio a Londra</h1>  
+      <img src="images/image1.png" alt="prima immagine">
+      <img src="images/image2.png" alt="seconda immagine">
+      <img src="images/image3.png" alt="terza immagine">
 
     </header>
 
@@ -16,7 +20,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
 
 </body>
