--- a/index.html
+++ b/index.html
@@ -12,10 +12,55 @@
       <img src="images/image1.png" alt="prima immagine">
       <img src="images/image2.png" alt="seconda immagine">
       <img src="images/image3.png" alt="terza immagine">
-
+     <hr>
     </header>
 
     <main>
+<h2>Le mie spese</h2>
+
+  <!-- tabella della spesa -->
+  <table>
+
+    <thead>
+        <tr>
+            <th>Numero</th>
+            <th>Descrizione</th>
+            <th>Costo</th>
+        </tr>
+    </thead>
+    
+    <tbody>
+
+        <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+        </tr>
+
+        <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+        </tr>
+
+        <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>  
+        </tr>
+
+    </tbody>
+    
+    <tfoot>
+        <tr>
+            <td>Totale</td>
+            <td></td>
+            <td>360€</td>
+        </tr>
+    </tfoot>
+
+</table>
+
 
     </main>
 
