--- a/index.html
+++ b/index.html
@@ -60,6 +60,27 @@
     </tfoot>
 
 </table>
+<hr>
+
+<h2>Cose da fare</h2>
+<ul>
+ <li>Visitare la Tower og London ✘</li>
+ <li>Visitare greenwich ✔</li>
+ <li>Ascoltare un artista di strada a Convent Garden ✔</li>
+ <li>Mangiare il tipico Fish and Chips inglese ✘ </li>
+</ul>
+<hr>
+
+<h2>Info utili:</h2>
+<ul>
+    
+<li>Numero utili di emergenza</li>
+
+<li>Hotel</li>
+
+<li> Aereo</li>
+
+</ul>
 
 
     </main>
