--- a/index.html
+++ b/index.html
@@ -72,16 +72,36 @@
 <hr>
 
 <h2>Info utili:</h2>
-<ul>
-    
-<li>Numero utili di emergenza</li>
+<ol>
 
-<li>Hotel</li>
+<li>
+    Numero utili di emergenza
+    <ul>
+        <li> <strong>999</strong> - Emergenza </li>
+        <li> <strong>101</strong> - Emergenza </li>
+        <li> <strong>111</strong> - Emergenza </li>
+    </ul>
+</li>
 
-<li> Aereo</li>
+<li>
+    Hotel
+    <ul>
+       <li><strong>Nome hotel:</strong> Buckingham Palace</li> 
+       <li><strong>Indirizzo hotel:</strong> Westminster, London SW1A 1AA.Regno Unito</li>
+    </ul>
+</li>
 
-</ul>
+<li> 
+    Aereo
+    <ul>
+        <li><strong>Volo di Andata:</strong> Y1234X, ore 9:30 da Milano Malpensa</li>
+        <li><strong>Volo di Ritorno:</strong> Y1236X, ore 18:30 da London Heathrow</li>
+    </ul>
 
+</li>
+
+</ol>
+<hr>
 
     </main>
 
